Fix Experience page spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -131,19 +131,6 @@
   max-width: 600px;
 }
 
-.experienceCard {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 60rem;
-  width: 45rem;
-}
-
 .resumeButton {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -168,13 +155,6 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.experienceCard:hover,
-.experienceCard:focus,
-.experienceCard:active {
   color: #0070f3;
   border-color: #0070f3;
 }
